# setsim

./: .gitignore  README.md  pyproject.toml
notebooks/: perturbation_clustering.ipynb  tutorial.ipynb
src/setsim/: io.py
src/setsim/_run_scripts/: run_script.py
src/setsim/matrix/: _nulldistribution.py  _similaritymatrix.py
src/setsim/sim/: _base.py  _count.py  _ic.py  _jaccard.py  _phrank.py  _roxas.py  _simgci.py  _simgic.py  _simici.py
src/setsim/sim/phenomizer/: _algo.py  _io.py  _test__algo.py  _test__io.py
src/sumsim/: __init__.py  io.py
src/sumsim/_run_scripts/: run_script.py
src/sumsim/benchmark/: __init__.py  _benchmark.py  _create_test_patients.py  _nulldistribution.py
src/sumsim/matrix/: __init__.py  _nulldistribution.py  _rank.py  _similaritymatrix.py
src/sumsim/model/: __init__.py  _base.py
src/sumsim/sim/: __init__.py  _base.py  _count.py  _ic.py  _jaccard.py  _phrank.py  _roxas.py  _simcic.py  _simgci.py  _simgic.py  _simici.py  _sumsim.py  test__ic.py
src/sumsim/sim/phenomizer/: __init__.py  _algo.py  _io.py  _test__algo.py  _test__io.py
src/sumsim/tests/sim/: __init__.py  test_ic.py
tests/: test_io.py
tests/benchmark/: test_benchmark.py  test_matrix.py  test_patientgenerator.py
tests/data/: MiniG2Ph.txt  hp.toy.json
tests/data/test_phenopackets/: Bill.json  Jed.json  Kayla.json  Matt.json  Tom.json
tests/sim/: test_ic.py  test_setsim.py  test_sumsim.py
