[build-system]
requires = ["setuptools>=65.6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "setsim"
description = "A proof of concept of the summing similarity measure"
authors = [
    { name = "Ben Coleman", email = "ben.coleman@jax.org" },
    { name = "Daniel Danis", email = "daniel.gordon.danis@protonmail.com" },
    { name = "Peter Robinson", email = "peter.robinson@jax.org" },
]

readme = "README.md"
requires-python = ">=3.8"
keywords = ["human phenotype ontology", "HPO", "library"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "hpo-toolkit >= 0.3.0",
    "phenopackets >= 2.0.2, <3.0.0",
    "pandas >= 1.3.0",
    "tqdm >= 4.62.0"
]
[project.optional-dependencies]
test = ["pytest>=7.0.0, <=9.0.0"]

[project.urls]
"Repository" = "https://github.com/monarch-initiative/sumsim"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["setsim", "sumsim"]

[tool.setuptools.dynamic]
version = { attr = "sumsim.__version__" }
